<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CalculatorIVA" >
    
    <TextView
        android:id="@+id/tvPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="50dp"
        android:paddingLeft="20dp"
        android:text="@string/price" />
    
    <TextView
        android:id="@+id/tvIVA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvPrice"
        android:paddingTop="20dp"
        android:paddingLeft="20dp"
        android:text="@string/iva" />
    
    <TextView
        android:id="@+id/tvTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvIVA"
        android:paddingTop="50dp"
        android:paddingLeft="20dp"
        android:text="@string/total" />

    <EditText
        android:id="@+id/etPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvPrice"
        android:layout_alignBottom="@+id/tvPrice"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="number" >
    </EditText>
    
    <EditText
        android:id="@+id/etIVA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvIVA"
        android:layout_alignBottom="@+id/tvIVA"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="number" > 
    </EditText>
    
 
    <EditText
        android:id="@+id/etTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvTotal"
        android:layout_alignBottom="@+id/tvTotal"
        android:layout_alignParentRight="true"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:ems="10"
        android:inputType="number" >
    </EditText>

    <Button
        android:id="@+id/bMake"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etTotal"
        android:layout_below="@+id/etTotal"
        android:layout_marginTop="54dp"
        android:text="@string/calculate" />

    <Button
        android:id="@+id/bCConverter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvTotal"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/etTotal"
        android:layout_marginBottom="26dp"
        android:text="@string/bGoConverter" />

</RelativeLayout>