<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CoinConverter" >

    <Button
        android:id="@+id/bCalculadoraIVA"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="14dp"
        android:text="@string/bGoCalculadoraIVA" />

    <EditText
        android:id="@+id/etResultDivisa"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bCalculadoraIVA"
        android:layout_alignLeft="@+id/sSouceCoin"
        android:layout_marginBottom="52dp"
        android:clickable="false"
        android:cursorVisible="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="number" />

    <Spinner
        android:id="@+id/sSouceCoin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/sTargetCoin"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/etBase"
        android:layout_marginTop="19dp" />

    <Spinner
        android:id="@+id/sTargetCoin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/etBase"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/tvTargetCoin" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bCalculadoraIVA"
        android:layout_alignTop="@+id/etResultDivisa"
        android:text="@string/tvResult" />

    <TextView
        android:id="@+id/tvTargetCoin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:text="@string/tvTargetCoin" />

    <TextView
        android:id="@+id/tvSourceCoin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvResult"
        android:layout_alignTop="@+id/sSouceCoin"
        android:layout_marginTop="22dp"
        android:text="@string/tvSouceCoin" />

    <TextView
        android:id="@+id/tvBase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvSourceCoin"
        android:layout_alignParentTop="true"
        android:layout_marginTop="70dp"
        android:text="@string/tvBase" />

    <EditText
        android:id="@+id/etBase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvBase"
        android:layout_alignBottom="@+id/tvBase"
        android:layout_toRightOf="@+id/tvSourceCoin"
        android:ems="10"
        android:inputType="number" />

</RelativeLayout>